[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/ship.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/ship_shield.png" type="Texture" id=3]
[ext_resource path="res://assets/ship_speed.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "exploding",
"speed": 16.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -8, -8, 8, 8, 8, 8, 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "exploding"

[node name="ShieldSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="SpeedSprite" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 4 )

[node name="PowerUpSpeedTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PowerUpSizeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="PowerUpSpeedTimer" to="." method="_on_PowerUpSpeedTimer_timeout"]
[connection signal="timeout" from="PowerUpSizeTimer" to="." method="_on_PowerUpSizeTimer_timeout"]
